Update Как писать тексты для РИ.md

--- a/Как писать тексты для РИ.md
+++ b/Как писать тексты для РИ.md
@@ -1,5 +1,8 @@
 # Как писать тексты для РИ: статьи, правила, посты в группах, информационные коммуникации в чатах
 
+Оригинал → https://docs.google.com/document/d/1gJtQ3UL8KErxmb8AAb21TQBl569zlPUFftjnSB71Z18/edit?tab=t.0#heading=h.3ixuin7hxdx3
+Автор → Лена Шпрингер
+
 Меня зовут Лена Шпрингер, я норм пишу для РИ, а еще больше 15 лет работаю с информационными (не художественными!) текстами по жизни — то есть и в целом норм пишу. Здесь я попытаюсь кратко передать свой опыт и дать основные алгоритмы и инструменты, которые помогут улучшить текстовые коммуникации мастеров с игроками.
 
 **Эта статья не нужна вам, если вы:**
