Update Как писать тексты для РИ.md

--- a/Как писать тексты для РИ.md
+++ b/Как писать тексты для РИ.md
@@ -3,8 +3,7 @@
 Оригинал → https://docs.google.com/document/d/1gJtQ3UL8KErxmb8AAb21TQBl569zlPUFftjnSB71Z18/edit?tab=t.0#heading=h.3ixuin7hxdx3
 Автор → Лена Шпрингер
 
-![Uploading image.png…]()
-
+<img width="1059" height="1065" alt="image" src="https://github.com/user-attachments/assets/e7a395e0-5243-4eba-a80a-d61028894f0f" />
 
 Меня зовут Лена Шпрингер, я норм пишу для РИ, а еще больше 15 лет работаю с информационными (не художественными!) текстами по жизни — то есть и в целом норм пишу. Здесь я попытаюсь кратко передать свой опыт и дать основные алгоритмы и инструменты, которые помогут улучшить текстовые коммуникации мастеров с игроками.
 
